--- a/hotel_bookings.ipynb
+++ b/hotel_bookings.ipynb
@@ -41,7 +41,7 @@
         "\n",
         "Is there an increase in bookings annually? Or decline? Or about the same?\n",
         "\n",
-        "Number of Days in waiting list?\n",
+        "Number of Days on waiting list?\n",
         "\n",
         "How many customers change their reservation before checking in?"
       ]
